# stopping_BO

./: LICENSE  README.md  plot_HPO.py  plot_test_func_optimization.py  pyproject.toml  requirements.txt  run_HPO.py  run_HPO_generate_dataset_for_classification.py  run_HPO_generate_dataset_for_regression.py  run_test_func_optimization.py
UCI_data/electrical_grid_stability/: electrical_grid_stability.csv
get_dataset/: HPO_data.py  test_func.py
model/: BayesianOptimization.py  GPyOptBO.py  logistic_regression.py  ridge_regression.py  stopping_criteria.py
result/HPO_experiments/HTRU2/logistic/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/HTRU2/rfc/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/HTRU2/svc/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/electrical_grid_stability/logistic/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/electrical_grid_stability/rfc/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/electrical_grid_stability/svc/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/gas_turbine/rfr/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
result/HPO_experiments/gas_turbine/ridge/: discretized_rmse.txt  discretized_std.txt  discretized_test_score.txt
utils/: bo_utils.py  draw_result.py  utils.py
(+33 files in other folders)
